[gd_scene load_steps=10 format=3 uid="uid://boen33xkjprbh"]

[ext_resource type="Script" path="res://src/Actors/player.gd" id="1_btpxe"]
[ext_resource type="PackedScene" uid="uid://crj0bq6hofrlm" path="res://src/Particles/death_particles.tscn" id="2_1sinr"]
[ext_resource type="Texture2D" uid="uid://ca6kf4g3un077" path="res://Assets/frog.png" id="2_qu8a6"]
[ext_resource type="AudioStream" uid="uid://b3mjt5obww56k" path="res://Assets/Audio/death.wav" id="3_vjt71"]
[ext_resource type="AudioStream" uid="uid://bcq1e7u3h2irh" path="res://Assets/Audio/jump.wav" id="4_r35wi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kq510"]
atlas = ExtResource("2_qu8a6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_80l0y"]
atlas = ExtResource("2_qu8a6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6h13x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq510")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80l0y")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_63d82"]
radius = 24.0

[node name="Player" type="Area2D"]
position = Vector2(160, 32)
script = ExtResource("1_btpxe")
death_particle = ExtResource("2_1sinr")
death_audio = ExtResource("3_vjt71")
jump_audio = ExtResource("4_r35wi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
sprite_frames = SubResource("SpriteFrames_6h13x")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_63d82")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="dead" from="." to="." method="_on_dead"]
